# embC_work

./: .gitignore
Mywork/: .cproject  .project  AllTests.cpp
Mywork/test/stdio/: SprintfTest.cpp
unity-test/: .cproject  .project  CMakeLists - コピー.txt  CMakeLists.txt
unity-test/include/: my_math.h  my_math.h~  my_string.h  my_string.h~
unity-test/src/: my_math.c  my_string.c
unity-test/test/runner/: .all_tests.c.swp  all_tests.c  my_math_test_runner.c  my_string_test_runner.c
unity-test/test/testcases/: .my_string_test.c.swp  my_math_test.c  my_string_test.c
